fix the bug for the nav bar stuck at the top of the window while scrolling in mobile view

--- a/public/styles/media-query.css
+++ b/public/styles/media-query.css
@@ -34,6 +34,7 @@ Desktop Styles
   }
 
   nav {
+    position: fixed;
     background-color: #4056A1;
   }
 
@@ -41,4 +42,5 @@ Desktop Styles
     background-color:#4056A1;
     background-image: none;
   }
+
 }
